--- a/eCommerceApp.Infracstructure/eCommerceApp.Infracstructure.csproj
+++ b/eCommerceApp.Infracstructure/eCommerceApp.Infracstructure.csproj
@@ -25,6 +25,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
+	  <PackageReference Include="Stripe.net" Version="47.4.0" />
   </ItemGroup>
 
   <ItemGroup>
